# Avionik

./: .gitignore  Datalink und Videostream.pptx  README.md  gstreamer.txt  gstreamer_LEO.py  gstreamer_LEO.sh  gstreamer_pipeline_samples.md
Code/Stream_Receiver/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
Code/Stream_Sender/: CMakeLists.txt  main.cpp
stitch-test-development/: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md
stitch-test-development/.githooks/: commit-msg  post-rewrite  pre-commit  pre-push
stitch-test-development/.gittemplates/: commit.txt
stitch-test-development/cmake/: Config.cmake  IncludeSymlinks.cmake  Options.cmake  VersionFromGit.cmake
stitch-test-development/stitch-test/: CMakeLists.txt  main.cpp
stitch-test-development/toolchains/clang/: arm-linux-gnueabi.cmake  native.cmake  x86_64-linux-gnu.cmake
stitch-test-development/tools/: git-init.sh
